--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ block content
 
         // USER INFO
         #userInfo
-            h2 User Info
+        //  h2 User Info
             p
                 strong Name:
                 |  <span id='userInfoName'></span>
